--- a/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.Rmd
@@ -6,10 +6,10 @@ dateCreated: 2015-10-23
 authors: Leah A. Wasser, Megan A. Jones, Zack Brym, Kristina Riemer, Jason Williams, Jeff Hollister,  Mike Smorul	
 contributors:	Jason Brown
 estimatedTime: 1 hour
-packagesLibraries: raster, rgdal
-topics: raster, spatial-data-gis
+packagesLibraries: neonUtilities, terra
+topics: raster, spatial-data-gis, lidar
 languagesTool: R
-dataProduct: DP3.30024.001, DP1.30010.001
+dataProduct: DP3.30024.001, DP3.30010.001
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.R
 tutorialSeries: raster-data-series
 urlTitle: dc-raster-data-r
@@ -18,9 +18,9 @@ urlTitle: dc-raster-data-r
 In this tutorial, we will review the fundamental principles, packages and 
 metadata/raster attributes that are needed to work with raster data in R. 
 We discuss the three core metadata elements that we need to understand to work 
-with rasters in R: **CRS**, **extent** and **resolution**. It also explores
+with rasters in R: **CRS**, **extent** and **resolution**. We also explore
 missing and bad data values as stored in a raster and how R handles these
-elements. Finally, it introduces the GeoTiff file format.
+elements. Finally, we introduce the GeoTiff file format.
 
 <div id="ds-objectives" markdown="1">
 
@@ -30,7 +30,7 @@ After completing this tutorial, you will be able to:
 
 * Understand what a raster dataset is and its fundamental attributes.
 * Know how to explore raster attributes in R.
-* Be able to import rasters into R using the `raster` package.
+* Be able to import rasters into R using the `terra` package.
 * Be able to quickly plot a raster file in R.
 * Understand the difference between single- and multi-band rasters.
 
@@ -40,48 +40,33 @@ on your computer to complete this tutorial.
 
 ### Install R Packages
 
-* **raster:** `install.packages("raster")`
-* **rgdal:** `install.packages("rgdal")`
+* **terra:** `install.packages("terra")`
 
 * <a href="https://www.neonscience.org/packages-in-r" target="_blank"> More on Packages in R </a>– Adapted from Software Carpentry.
 
 ### Download Data
 
-<h3> <a href="https://ndownloader.figshare.com/files/3701578"> NEON Teaching Data Subset: Airborne Remote Sensing Data </a></h3>
+Data required for this tutorial will be downloaded using `neonUtilities` in the lesson.
 
-The LiDAR and imagery data used to create this raster teaching data subset 
-were collected over the 
-<a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network's</a> 
-<a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank" >Harvard Forest</a>
-and 
-<a href="https://www.neonscience.org/field-sites/field-sites-map/SJER" target="_blank" >San Joaquin Experimental Range</a>
-field sites and processed at NEON headquarters. 
-The entire dataset can be accessed by request from the 
-<a href="http://data.neonscience.org" target="_blank"> NEON Data Portal</a>.
-
-<a href="https://ndownloader.figshare.com/files/3701578" class="link--button link--arrow"> Download Dataset</a>
-
-
-
+The LiDAR and imagery data used to create this raster teaching data set
+were collected over the <a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network's</a> 
+<a href="https://www.neonscience.org/field-sites/HARV" target="_blank" >Harvard Forest (HARV)</a> and 
+<a href="https://www.neonscience.org/field-sites/SJER" target="_blank" >San Joaquin Experimental Range (SJER)</a>
+field sites and processed at NEON headquarters. The entire dataset can be accessed from the 
+<a href="http://data.neonscience.org" target="_blank">NEON Data Portal</a>.
 
 
 ****
 
-**Set Working Directory:** This lesson assumes that you have set your working 
-directory to the location of the downloaded and unzipped data subsets. 
+**Set Working Directory:** This lesson will explain how to set the working directory. You may wish to set your working directory to some other location, depending on how you prefer to organize your data.
 
 <a href="https://www.neonscience.org/set-working-directory-r" target="_blank"> An overview
 of setting the working directory in R can be found here.</a>
 
-**R Script & Challenge Code:** NEON data lessons often contain challenges that reinforce 
-learned skills. If available, the code for challenge solutions is found in the
-downloadable R script of the entire lesson, available in the footer of each lesson page.
-
-
 ****
 
-* <a href="http://cran.r-project.org/web/packages/raster/raster.pdf" target="_blank">
-Read more about the `raster` package in R.</a>
+* <a href="https://cran.r-project.org/web/packages/terra/terra.pdff" target="_blank">
+Read more about the `terra` package in R.</a>
 * <a href="https://www.neonscience.org/raster-data-r" target="_blank"> NEON Data Skills tutorial: Raster Data in R - The Basics</a>
 * <a href="https://www.neonscience.org/image-raster-data-r" target="_blank"> NEON Data Skills tutorial: Image Raster Data in R - An Intro</a>
 
@@ -102,33 +87,48 @@ map as pixels. Each pixel value represents an area on the Earth's surface.
 
 ## Raster Data in R
 
-Let's first import a raster dataset into R and explore its metadata.
-To open rasters in R, we will use the `raster` and `rgdal` packages.
+Let's first import a raster dataset into R and explore its metadata. To open rasters in R, we will use the `terra` package.
 
-```{r load-libraries }
-# load libraries
-library(raster)
-library(rgdal)
+```{r load-libraries, results="hide"}
+library(terra)
 
-# set working directory to ensure R can find the file we wish to import
-wd <- "~/Git/data/" # this will depend on your local environment
-# be sure that the downloaded file is in this directory
+# set working directory, you can change this if desired
+wd <- "~/data/" 
 setwd(wd)
 ```
 
+## Download LiDAR Raster Data
+
+We can use the neonUtilities function byTileAOP to download a single elevation tiles (DSM and DTM). You can run help(byTileAOP) to see more details on what the various inputs are. For this exercise, we'll specify the UTM Easting and Northing to be (732000, 4713500), which will download the tile with the lower left corner (732000,4713000). By default, the function will check the size total size of the download and ask you whether you wish to proceed (y/n). This file is ~8 MB, so make sure you have enough space on your local drive. You can set `check.size=TRUE` if you want to check the file size before downloading.
+
+``` {r download-dsm-data, eval=FALSE}
+byTileAOP(dpID='DP3.30024.001', # lidar elevation
+          site='HARV',
+          year='2022',
+          easting=732000,
+          northing=4713500,
+          check.size=FALSE, # set to TRUE or can leave out if you want to check the size before downloading
+          savepath = wd)
+```
+This file will be downloaded into a nested subdirectory under the ~/data folder, inside a folder named DP3.30024.001 (the Data Product ID). The file should show up in this location: ~/data/DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DSMGtif/NEON_D01_HARV_DP3_732000_4713000_DSM.tif.
+
 ## Open a Raster in R
-We can use the `raster("path-to-raster-here")` function to open a raster in R. 
+We can use the `terra("path-to-raster-here")` function to open a raster in R. 
 
 <div id="ds-dataTip" markdown="1">
+
 <i class="fa fa-star"></i> **Data Tip:**  OBJECT NAMES! To improve code 
 readability, file and object names should be used that make it clear what is in 
 the file. The data for this tutorial were collected over from Harvard Forest so 
-we'll use a naming convention of `datatype_HARV`. 
+we'll use a naming convention of `datatype_HARV`.
+
 </div>
 
 ```{r open-raster, fig.cap="Digital surface model showing the elevation of NEON's site Harvard Forest"}
 # Load raster into R
-DSM_HARV <- raster(paste0(wd, "NEON-DS-Airborne-Remote-Sensing/HARV/DSM/HARV_dsmCrop.tif"))
+
+dsm_harv_file <- paste0(wd, "DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DSMGtif/NEON_D01_HARV_DP3_732000_4713000_DSM.tif")
+DSM_HARV <- rast(dsm_harv_file)
 
 # View raster structure
 DSM_HARV 
@@ -136,7 +136,7 @@ DSM_HARV
 # plot raster
 # note \n in the title forces a line break in the title
 plot(DSM_HARV, 
-     main="NEON Digital Surface Model\nHarvard Forest")
+     main="Digital Surface Model - HARV")
 
 ```
 
@@ -152,18 +152,7 @@ range of quantitative values. Some examples of continuous rasters include:
 The raster we loaded and plotted earlier was a digital surface model, or a map of the elevation for Harvard Forest derived from the 
 <a href="https://www.neonscience.org/data-collection/airborne-remote-sensing" target="_blank"> 
 NEON AOP LiDAR sensor</a>. Elevation is represented as a continuous numeric variable in this map. 
-The legend shows the continuous range of values in the data from around 300 to 
-420 meters.
-
-
-```{r elevation-map, fig.cap="Continuous elevation map of NEON's site Harvard Forest"}
-# render DSM for tutorial content background
-DSM_HARV <- raster(paste0(wd, "NEON-DS-Airborne-Remote-Sensing/HARV/DSM/HARV_dsmCrop.tif"))
-
-# code output here - DEM rendered on the screen
-plot(DSM_HARV, main="Continuous Elevation Map\n NEON Harvard Forest Field Site")
-
-```
+The legend shows the continuous range of values in the data from around 300 to 420 meters.
 
 Some rasters contain categorical data where each pixel represents a discrete
 class such as a landcover type (e.g., "forest" or "grassland") rather than a
@@ -176,12 +165,12 @@ maps include:
 
 #### Categorical Landcover Map for the United States 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/geospatial-skills/NLCD06_conus_lg.gif ">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/geospatial-skills/NLCD06_conus_lg.gif"
-    alt="Map of the different landcover types of the continental United States each represented by different colors." >
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/NLCD06_conus_lg.gif ">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/NLCD06_conus_lg.gif"
+    alt="Map of the different land cover types of the continental United States each represented by different colors." >
     </a>
-    <figcaption> Map of the United States showing landcover as categorical data.
-    Each color is a different landcover category.  Source: 
+    <figcaption> Map of the United States showing land cover as categorical data.
+    Each color is a different land cover category.  Source: 
     <a href="http://www.mrlc.gov/nlcd06_data.php" target="_blank">
     Multi-Resolution Land Characteristics Consortium, USGS</a> 
     </figcaption>
@@ -190,7 +179,7 @@ maps include:
 #### Categorical Elevation Map of the NEON Harvard Forest Site
 The legend of this map shows the colors representing each discrete class. 
 
-```{r classified-elevation-map, fig.cap="Classified elevation map of NEON's site Harvard Forest"}
+```{r classified-elevation-map, fig.cap="Classified elevation map of NEON's site Harvard Forest", fig.width=10}
 # Demonstration image for the tutorial
 
 # add a color map with 5 colors
@@ -204,14 +193,14 @@ par(xpd = FALSE,mar=c(5.1, 4.1, 4.1, 4.5))
 plot(DSM_HARV, 
 	col=col, 
 	breaks=brk, 
-	main="Classified Elevation Map\nNEON Harvard Forest Field Site",
+	main="Classified Elevation Map - HARV",
 	legend = FALSE
 	)
 
 # turn xpd back on to force the legend to fit next to the plot.
 par(xpd = TRUE)
 # add a legend - but make it appear outside of the plot
-legend( par()$usr[2], 4713700,
+legend( 733100, 4713700,
         legend = c("High Elevation", "Middle","Low Elevation"), 
         fill = rev(col))
 ```
@@ -220,8 +209,7 @@ legend( par()$usr[2], 4713700,
 Raster data can come in many different formats. In this tutorial, we will use the 
 geotiff format which has the extension `.tif`. A `.tif` file stores metadata
 or attributes about the file as embedded `tif tags`. For instance, your camera
-might 
-store a tag that describes the make and model of the camera or the date the
+might store a tag that describes the make and model of the camera or the date the
 photo was taken when it saves a `.tif`. A GeoTIFF is a standard `.tif` image
 format with additional spatial (georeferencing) information embedded in the file
 as tags. These tags can include the following raster metadata:
@@ -244,8 +232,8 @@ in geographic space. It also tells R what method should be used to "flatten"
 or project the raster in geographic space. 
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/geospatial-skills/USMapDifferentProjections_MCorey_Opennews-org.jpg">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/geospatial-skills/USMapDifferentProjections_MCorey_Opennews-org.jpg"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/USMapDifferentProjections_MCorey_Opennews-org.jpg">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/USMapDifferentProjections_MCorey_Opennews-org.jpg"
     alt="Four different map projections (Mercator, UTM Zone 11N, U.S. National Atlas Equal Area, and WGS84) of the continental United States demonstrating that each projection produces a map with a different shape and proportions.">
     </a>
     <figcaption> Maps of the United States in different projections. Notice the 
@@ -255,10 +243,10 @@ or project the raster in geographic space.
 </figure>
 
 ### What Makes Spatial Data Line Up On A Map?
-There are lots of great resources that describe coordinate reference systems and
+There are many great resources that describe coordinate reference systems and
 projections in greater detail (read more, below). For the purposes of this 
-activity, what is important to understand is that data from the same location 
-but saved in **different projections will not line up in any GIS or other 
+activity, it is important to understand that **data from the same location 
+but saved in different projections will not line up in any GIS or other 
 program**. Thus, it's important when working with spatial data in a program like 
 R to identify the coordinate reference system applied to the data and retain 
 it throughout data processing and analysis.
@@ -273,8 +261,7 @@ Read More:
 ### How Map Projections Can Fool the Eye
 Check out this short video, from 
 <a href="https://www.youtube.com/channel/UCBUVGPsJzc1U8SECMgBaMFw" target="_blank"> Buzzfeed</a>, 
-highlighting how map projections can make continents 
-seems proportionally larger or smaller than they actually are!
+highlighting how map projections can make continents seems proportionally larger or smaller than they actually are!
 
 <iframe width="640" height="360" src="https://www.youtube.com/embed/KUF_Ckv8HbE" frameborder="0" allowfullscreen></iframe>
 
@@ -283,51 +270,42 @@ seems proportionally larger or smaller than they actually are!
 We can view the `CRS` string associated with our R object using the`crs()` 
 method. We can assign this string to an R object, too.
 
-```{r view-resolution-units}
-# view resolution units
-crs(DSM_HARV)
+```{r view-crs}
+# view crs description
+crs(DSM_HARV,describe=TRUE)
 
 # assign crs to an object (class) to use for reprojection and other tasks
-myCRS <- crs(DSM_HARV)
-myCRS
+harvCRS <- crs(DSM_HARV)
 
 ```
 
-The `CRS` of our `DSM_HARV` object tells us that our data are in the UTM 
-projection.
+The `CRS` of our `DSM_HARV` object tells us that our data are in the UTM projection, in zone 18N.
 
 <figure>
     <a href="https://en.wikipedia.org/wiki/File:Utm-zones-USA.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Utm-zones-USA.svg/720px-Utm-zones-USA.svg.png"
     alt="Image showing the ten different UTM zones (10-19) across the continental United States."></a>
-   	<figcaption> The UTM zones across the continental United States. Source: 
-   	Chrismurf, wikimedia.org.
+   	<figcaption> The UTM zones across the continental United States. Source: Chrismurf, wikimedia.org.
 		</figcaption>
 </figure>
 
-The CRS in this case is in a `PROJ` format. This means that the projection
-information is strung together as a series of text elements, each of which 
-begins with a `+` sign. 
+The CRS in this case is in a `char` format. This means that the projection
+information is strung together as a series of text elements.
 
  `+proj=utm +zone=18 +datum=WGS84 +units=m +no_defs +ellps=WGS84 +towgs84=0,0,0`
 
 We'll focus on the first few components of the CRS in this tutorial.
 
-* `+proj=utm` The projection of the dataset. Our data are in Universal 
-Transverse Mercator (UTM).  
-* `+zone=18` The UTM projection divides up the world into zones, this element
-tells you which zone the data are in. Harvard Forest is in Zone 18.
-* `+datum=WGS84` The datum was used to define the center point of the 
-projection. Our raster uses the `WGS84` datum.
-* `+units=m` This is the horizontal units that the data are in. Our units 
-are meters. 
+* `name`: The projection of the dataset. Our data are in WGS84 (World Geodetic System 1984) / UTM (Universal Transverse Mercator) zone 18N. WGS84 is the datum. The UTM projection divides up the world into zones, this element tells you which zone the data are in. Harvard Forest is in Zone 18.
+* `authority`: EPSG (European Petroleum Survey Group) - organization that maintains a geodetic parameter database with standard codes
+* `code`: The EPSG code. For more details, see <a href="https://epsg.io/32618" target="_blank">EPSG 32618</a>.
 
 ## Extent
 The spatial extent is the geographic area that the raster data covers. 
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/vector-general/spatial_extent.png">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/vector-general/spatial_extent.png"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/vector-general/spatial_extent.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/vector-general/spatial_extent.png"
     alt="Image of three different spatial extent types: Points extent, lines extent, and polygons extent. Points extent shows three points along the edge of a square object. Lines extent shows a line drawn with three points along the edge of a square object. Polygons extent shows a polygon drawn with three points inside of a square object.">
     </a>
     <figcaption> Image Source: National Ecological Observatory Network (NEON)
@@ -345,19 +323,18 @@ Given our data resolution is 1 x 1, this means that each pixel represents a
 1 x 1 meter area on the ground.
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/raster_resolution.png">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/raster_resolution.png"
-    alt="Four images of a raster over the same extent, but at four different resolutions from 8 meters to 1 meter. At 8 meters, the image is really blurry. At 1m, the image is really clear. At 4 and 2 meters, the image is somewhere in the intermediate.">
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/raster_resolution.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/raster_resolution.png"
+    alt="Four images of a raster over the same extent, but at four different resolutions from 8 meters to 1 meter. At 8 meters, the image is really blurry. At 1m, the image is really clear. At 4 and 2 meters, the image is somewhere in the middle.">
     </a>
     <figcaption> Source: National Ecological Observatory Network (NEON)
     </figcaption>
 </figure>
 
-The best way to view resolution units is to look at the 
-coordinate reference system string `crs()`. Notice our data contains: `+units=m`.
+The best way to view resolution units is to look at the coordinate reference system string `crs(rast,proj=TRUE)`. Notice our data contains: `+units=m`.
 
 ``` {r resolution-units}
-crs(DSM_HARV)
+crs(DSM_HARV,proj=TRUE)
 ```
 
 ## Calculate Raster Min and Max Values
@@ -370,20 +347,12 @@ Raster statistics are often calculated and embedded in a `geotiff` for us.
 However if they weren't already calculated, we can calculate them using the
 `setMinMax()` function.
 
-```{r set-min-max }
-
-# This is the code if min/max weren't calculated: 
-# DSM_HARV <- setMinMax(DSM_HARV) 
-
-# view the calculated min value
-minValue(DSM_HARV)
-
-# view only max value
-maxValue(DSM_HARV)
-
+```{r view-min-max }
+# view the min and max values
+min(DSM_HARV)
 ```
 
-We can see that the elevation at our site ranges from 305.07m to 416.07m.
+We can see that the elevation at our site ranges from 317.91 m to 433.94 m.
 
 ## NoData Values in Rasters
 
@@ -396,18 +365,31 @@ at the edge of the raster will have `NoDataValue`s. This often happens when the
 data were collected by an airplane which only flew over some part of a defined 
 region. 
 
-In the image below, the pixels that are black have `NoDataValue`s.
-The camera did not collect data in these areas. 
+Let's take a look at some of the RGB Camera data over HARV, this time downloading a tile at the edge of the flight box.
+
+``` {r download-rgb-data, eval=FALSE}
+byTileAOP(dpID='DP3.30010.001',
+          site='HARV',
+          year='2022',
+          easting=737500,
+          northing=4701500,
+          check.size=FALSE, # set to TRUE or can leave out if you want to check the size before downloading
+          savepath = wd)
+```
+
+This file will be downloaded into a nested subdirectory under the ~/data folder, inside a folder named DP3.30010.001 (the Camera Data Product ID). The file should show up in this location: ~/data/DP3.30010.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/Camera/Mosaic/2022_HARV_7_737000_4701000_image.tif.
+
+In the image below, the pixels that are black have `NoDataValue`s. The camera did not collect data in these areas. 
 
 ```{r demonstrate-no-data-black, fig.cap="Colorized raster image with NoDataValues around the edge rendered in black"}
 # no data demonstration code - not being taught 
 # Use stack function to read in all bands
-RGB_stack <- 
-  stack(paste0(wd, "NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"))
+RGB_HARV <- 
+  rast(paste0(wd,"DP3.30010.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/Camera/Mosaic/2022_HARV_7_737000_4701000_image.tif"))
 
 # Create an RGB image from the raster stack
 par(col.axis="white",col.lab="white",tck=0)
-plotRGB(RGB_stack, r = 1, g = 2, b = 3, 
+plotRGB(RGB_HARV, r = 1, g = 2, b = 3, 
         axes=TRUE, main="Raster With NoData Values\nRendered in Black")
 
 ```
@@ -418,12 +400,11 @@ with the `NoDataValue` as `NA`.
 
 ```{r demonstrate-no-data, fig.cap="Colorized raster image with NoDataValues around the edge removed"}
 # reassign cells with 0,0,0 to NA
-# this is simply demonstration code - we will not teach this.
 func <- function(x) {
   x[rowSums(x == 0) == 3, ] <- NA
   x}
 
-newRGBImage <- calc(RGB_stack, func)
+newRGBImage <- app(RGB_HARV, func)
 
 
 par(col.axis="white",col.lab="white",tck=0)
@@ -455,10 +436,11 @@ Examples of Bad Data Values:
 
 * The normalized difference vegetation index (NDVI), which is a measure of 
 greenness, has a valid range of -1 to 1. Any value outside of that range would 
-be considered a "bad" or miscalculated value.
+be considered a "bad" value.
 * Reflectance data in an image will often range from 0-1 or 0-10,000 depending 
 upon how the data are scaled. Thus a value greater than 1 or greater than 10,000
-is likely caused by an error in either data collection or processing.
+is likely caused by an error in either data collection or processing. These 
+erroneous values can occur, for example, in water vapor absorption bands.
 
 ### Find Bad Data Values
 Sometimes a raster's metadata will tell us the range of expected values for a
@@ -480,46 +462,11 @@ hist(DSM_HARV,
      main="Distribution of Digital Surface Model Values\n Histogram Default: 100,000 pixels\n NEON Harvard Forest",
      xlab="DSM Elevation Value (m)",
      ylab="Frequency",
-     col="wheat")
+     col="lightblue")
 
 ```
 
-
-Notice that a warning is shown when R creates the histogram. 
-
-`Warning in .hist1(x, maxpixels = maxpixels, main = main, plot = plot, ...): 4%  
-of the raster cells were used. 100000 values used.`
-
-This warning is caused by the default maximum pixels value of 100,000 associated 
-with the `hist` function. This maximum value is to ensure processing efficiency
-as our data become larger!
-
-* More on 
-<a href="http://www.r-bloggers.com/basics-of-histograms/" target="_blank">histograms in R from R-bloggers</a>
-
-We can define the max pixels to ensure that all pixel values are included in the
-histogram. **USE THIS WITH CAUTION** as forcing R to plot all pixel values
-in a histogram can be problematic when dealing with very large datasets.
-
-
-``` {r view-raster-histogram2, fig.cap="Histogram showing the distribution of digital surface model values with all pixel values included"}
-
-# View the total number of pixels (cells) in is our raster 
-ncell(DSM_HARV)
-
-# create histogram that includes with all pixel values in the raster
-hist(DSM_HARV, 
-     maxpixels=ncell(DSM_HARV),
-     main="Distribution of DSM Values\n All Pixel Values Included\n NEON Harvard Forest Field Site",
-     xlab="DSM Elevation Value (m)",
-     ylab="Frequency",
-     col="wheat4")
-
-```
-
-Note that the shape of both histograms looks similar to the previous one that
- was created using a representative 10,000 pixel subset of our raster data. The 
-distribution of elevation values for our `Digital Surface Model (DSM)` looks 
+The distribution of elevation values for our `Digital Surface Model (DSM)` looks 
 reasonable. It is likely there are no bad data values in this particular raster.
 
 ## Raster Bands
@@ -528,29 +475,37 @@ is a single band raster. This means that there is only one dataset stored in
 the raster: surface elevation in meters for one time period.
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/single_multi_raster.png">
-    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/raster-general/single_multi_raster.png"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/single_multi_raster.png">
+    <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/raster-general/single_multi_raster.png"
     alt="Left: 3D image of a raster with only one band. Right: 3D image showing four separate layers of a multi band raster."></a>
     <figcaption>Source: National Ecological Observatory Network (NEON).
     </figcaption>
 </figure>
 
-A raster dataset can contain one or more bands. We can use the `raster()` function 
-to import one single band from a single OR multi-band raster. We can view the number 
-of bands in a raster using the `nlayers()` function. 
+A raster dataset can contain one or more bands. We can use the `rast`()` function 
+to import all bands from a single OR multi-band raster. We can view the number 
+of bands in a raster using the `nlyr()` function. 
 
-```{r view-raster-bands }
+```{r view-dsm-bands }
 
-# view number of bands
-nlayers(DSM_HARV)
+# view number of bands in the Lidar DSM raster
+nlyr(DSM_HARV)
+
+```
+```{r view-rgb-bands }
+
+# view number of bands in the RGB Camera raster
+nlyr(RGB_HARV)
 
 ```
 
-However, raster data can also be multi-band meaning that one raster file 
-contains data for more than one variable or time period for each cell. By
-default the `raster()` function only imports the first band in a raster
-regardless of whether it has one or more bands. Jump to the fourth tutorial in 
-this series for a tutorial on multi-band rasters: 
+As we see from the RGB camera raster, raster data can also be multi-band, 
+meaning one raster file contains data for more than one variable or time period 
+for each cell. By default the `terra::rast()` function imports all bands of a 
+multi-band raster. You can set `lyrs = 1` if you only want to read in the first 
+layer, for example.
+
+Jump to the fourth tutorial in this series for a tutorial on multi-band rasters: 
 <a href="https://www.neonscience.org/dc-multiband-rasters-r" target="_blank">
 *Work with Multi-band Rasters: Images in R*</a>.
 
@@ -558,56 +513,52 @@ this series for a tutorial on multi-band rasters:
 
 Remember that a `GeoTIFF` contains a set of embedded tags that contain 
 metadata about the raster. So far, we've explored raster metadata **after**
-importing it in R. However, we can use the `GDALinfo("path-to-raster-here")`
-function to view raster metadata before we open a file in R.
+importing it in R. However, we can use the `describe("path-to-raster-here")`
+function to view raster information (such as metadata) before we open a file in 
+R. Use `help(describe)` to see other options for exploring the file contents.
 
-```{r view-attributes-gdal}
+```{r describe-meta}
 
-# view attributes before opening file
-GDALinfo(paste0(wd, "NEON-DS-Airborne-Remote-Sensing/HARV/DSM/HARV_dsmCrop.tif"))
+# view metadata attributes before opening the file
+describe(path.expand(dsm_harv_file),meta=TRUE)
+
+```
+Specifying `options=c("stats")` will show some summary statistics:
+
+```{r describe-stats}
+
+# view summary statistics before opening the file
+describe(path.expand(dsm_harv_file),options=c("stats"))
 
 ```
 
-Notice a few things in the output:
 
-1. A projection is described using a string in the `proj4` format :
-`+proj=utm +zone=18 +datum=WGS84 +units=m +no_defs `
-2. We can identify a `NoDataValue`: -9999
-3. We can tell how many `bands` the file contains: 1
-4. We can view the x and y `resolution` of the data: 1
-5. We can see the min and max values of the data: `Bmin` and `Bmax`.
-
-It is ideal to use `GDALinfo` to explore your file **before** reading it into 
-R.
+It can be useful to use `describe` to explore your file **before** reading it into R.
 
 <div id="ds-challenge" markdown="1">
 
 ### Challenge: Explore Raster Metadata 
 
-Without using the `raster` function to read the file into R, determine the
-following about the  `NEON-DS-Airborne-Remote-Sensing/HARV/DSM/HARV_DSMhill.tif` file:
+Without using the `terra` function to read the file into R, determine the following information about the DTM file. This was downloaded at the same time as the DSM file, and as long as you didn't move the data, it should be located here: ~/data/DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DTMGtif/NEON_D01_HARV_DP3_732000_4713000_DTM.tif. 
 
 1. Does this file has the same `CRS` as `DSM_HARV`?
 2. What is the `NoDataValue`?
 3. What is resolution of the raster data? 
-4. How large would a 5x5 pixel area would be on the Earth's surface? 
-5. Is the file a multi- or single-band raster?
+4. Is the file a multi- or single-band raster?
+5. On what dates was this site flown?
 
-Notice: this file is a `hillshade`. We will learn about hillshades in
-<a href="https://www.neonscience.org/dc-multiband-rasters-r" target="_blank"> *Work with Multi-band Rasters: Images in R*</a>.
- 
 </div>
 
 ``` {r challenge-code-attributes, eval=FALSE, echo=FALSE}
-GDALinfo(paste0(wd, "NEON-DS-Airborne-Remote-Sensing/HARV/DSM/HARV_DSMhill.tif"))
+dtm_harv_file <- paste0(wd, "DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DTMGtif/NEON_D01_HARV_DP3_732000_4713000_DTM.tif")
+describe(path.expand(dtm_harv_file))
 
 # ANSWERS ###
 # 1. If this file has the same CRS as DSM_HARV?  Yes: UTM Zone 18, WGS84, meters. 
 # 2. What format `NoDataValues` take?  -9999
-# 3. The resolution of the raster data? 1x1
-# 4. How large a 5x5 pixel area would be? 5mx5m How? We are given resolution of 
-#    1x1 and units in meters, therefore resolution of 5x5 means 5x5m. 
-# 5. Is the file a multi- or single-band raster?  Single 
+# 3. The resolution of the raster data? 1x1 m
+# 4. Is the file a multi- or single-band raster?  Single 
+# 5. On what dates was this site flown? Flown on 2022080312, 2022080412, 2022081213, 2022081413 (See the TIFFTAG_DATETIME tag)
 
 ```
 
