--- a/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.Rmd
@@ -113,30 +113,27 @@ byTileAOP(dpID='DP3.30024.001', # lidar elevation
 This file will be downloaded into a nested subdirectory under the ~/data folder, inside a folder named DP3.30024.001 (the Data Product ID). The file should show up in this location: ~/data/DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DSMGtif/NEON_D01_HARV_DP3_732000_4713000_DSM.tif.
 
 ## Open a Raster in R
-We can use the `terra("path-to-raster-here")` function to open a raster in R. 
+We can use `terra`'s `rast("path-to-raster-here")` function to open a raster in R. 
 
 <div id="ds-dataTip" markdown="1">
 
-<i class="fa fa-star"></i> **Data Tip:**  OBJECT NAMES! To improve code 
+<i class="fa fa-star"></i> **Data Tip:**  VARIABLE NAMES! To improve code 
 readability, file and object names should be used that make it clear what is in 
-the file. The data for this tutorial were collected over from Harvard Forest so 
-we'll use a naming convention of `datatype_HARV`.
+the file. The data for this tutorial were collected over from Harvard Forest (HARV),
+sowe'll use the naming convention of `DATATYPE_HARV`.
 
 </div>
 
 ```{r open-raster, fig.cap="Digital surface model showing the elevation of NEON's site Harvard Forest"}
 # Load raster into R
-
 dsm_harv_file <- paste0(wd, "DP3.30024.001/neon-aop-products/2022/FullSite/D01/2022_HARV_7/L3/DiscreteLidar/DSMGtif/NEON_D01_HARV_DP3_732000_4713000_DSM.tif")
 DSM_HARV <- rast(dsm_harv_file)
 
 # View raster structure
 DSM_HARV 
 
-# plot raster
-# note \n in the title forces a line break in the title
-plot(DSM_HARV, 
-     main="Digital Surface Model - HARV")
+# plot raster 
+plot(DSM_HARV, main="Digital Surface Model - HARV")
 
 ```
 
@@ -290,9 +287,7 @@ The `CRS` of our `DSM_HARV` object tells us that our data are in the UTM project
 The CRS in this case is in a `char` format. This means that the projection
 information is strung together as a series of text elements.
 
- `+proj=utm +zone=18 +datum=WGS84 +units=m +no_defs +ellps=WGS84 +towgs84=0,0,0`
-
-We'll focus on the first few components of the CRS in this tutorial.
+We'll focus on the first few components of the CRS, as described above.
 
 * `name`: The projection of the dataset. Our data are in WGS84 (World Geodetic System 1984) / UTM (Universal Transverse Mercator) zone 18N. WGS84 is the datum. The UTM projection divides up the world into zones, this element tells you which zone the data are in. Harvard Forest is in Zone 18.
 * `authority`: EPSG (European Petroleum Survey Group) - organization that maintains a geodetic parameter database with standard codes
