--- a/tutorials/R/Geospatial-skills/intro-raster-r/02-Reproject-Raster-In-R/02-Reproject-Raster-In-R.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/02-Reproject-Raster-In-R/02-Reproject-Raster-In-R.Rmd
@@ -7,14 +7,14 @@ dateCreated: 2015-10-23
 authors: Leah A. Wasser, Megan A. Jones, Zack Brym, Kristina Riemer, Jason Williams, Jeff Hollister, Mike Smorul	
 contributors:	Jason Brown
 estimatedTime: 30 minutes
-packagesLibraries: raster, rgdal
+packagesLibraries: terra
 topics: 
 subtopics: data-analysis, raster, spatial-data-gis
 languagesTool: R
 dataProduct: DP3.30024.001
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/02-Reproject-Raster-In-R/02-Reproject-Raster-In-R.R
 tutorialSeries: raster-data-series
-urlTitle: dc-reproject-raster-data-r
+urlTitle: reproject-raster-data-r
 
 ---
 
@@ -22,9 +22,9 @@ Sometimes we encounter raster datasets that do not "line up" when plotted or
 analyzed. Rasters that don't line up are most often in different Coordinate
 Reference Systems (CRS).
 
-This tutorial explains how to deal with rasters in different, known CRSs. It
-will walk though reprojecting rasters in R using the `projectRaster()`
-function in the `raster` package.
+This tutorial explains how to deal with rasters in different, known Coordinate 
+Reference Systems (CRS). It demonstrates how to re-project rasters in R using 
+the `project() function in the `terra` package.
 
 
 <div id="ds-objectives" markdown="1">
@@ -33,7 +33,7 @@ function in the `raster` package.
 
 After completing this tutorial, you will be able to:
 
-* Be able to reproject a raster in R.
+* re-project a raster in R.
 
 ## Things You’ll Need To Complete This Tutorial
 You will need the most current version of R and, preferably, `RStudio` loaded
@@ -41,8 +41,7 @@ on your computer to complete this tutorial.
 
 ### Install R Packages
 
-* **raster:** `install.packages("raster")`
-* **rgdal:** `install.packages("rgdal")`
+* **terra:** `install.packages("terra")`
 
 * <a href="https://www.neonscience.org/packages-in-r" target="_blank"> More on Packages in R </a>– Adapted from Software Carpentry.
 
@@ -100,15 +99,10 @@ We will use the `raster` and `rgdal` packages in this tutorial.
 
 ```{r load-libraries }
 # load raster package
-library(raster)
-library(rgdal)
-
-# set working directory to ensure R can find the file we wish to import
-wd <- "~/Git/data/" # this will depend on your local environment
-# be sure that the downloaded file is in this directory
+library(terra)
+# set working directory
+wd <- "~/data/"
 setwd(wd)
-
-
 ```
 
 Let's create a map of the Harvard Forest Digital Terrain Model 
@@ -141,8 +135,10 @@ top of our hillshade. The hillshade plotted just fine on it's own. Let's try to
 plot the DTM on it's own to make sure there are data there.
 
 <div id="ds-dataTip" markdown="1">
+
 <i class="fa fa-star"></i>**Code Tip:** For boolean R elements, such as
  `add=TRUE`, you can use `T` and `F` in place of `TRUE` and `FALSE`.
+ 
 </div>
 
 ```{r plot-DTM, fig.cap="Digital terrain model showing the ground surface of NEON's site Harvard Forest"}
@@ -151,7 +147,7 @@ plot(DTM_HARV,
      col=terrain.colors(10),
      alpha=1,
      legend=F,
-     main="Digital Terrain Model\n NEON Harvard Forest Field Site")
+     main="Digital Terrain Model - HARV")
 
 ```
 
@@ -169,30 +165,32 @@ crs(DTM_hill_HARV)
 Aha! `DTM_HARV` is in the UTM projection. `DTM_hill_HARV` is in
 `Geographic WGS84` - which is represented by latitude and longitude values.
 Because the two rasters are in different CRSs, they don't line up when plotted
-in R. We need to *reproject* `DTM_hill_HARV` into the UTM CRS. Alternatively,
+in R. We need to *re-project* `DTM_hill_HARV` into the UTM CRS. Alternatively,
 we could project `DTM_HARV` into WGS84. 
 
 ## Reproject Rasters
-We can use the `projectRaster` function to reproject a raster into a new CRS.
-Keep in mind that reprojection only works when you first have a *defined* CRS
-for the raster object that you want to reproject. It cannot be used if *no*
+We can use the `projectRaster` function to re-project a raster into a new CRS.
+Keep in mind that re-projection only works when you first have a *defined* CRS
+for the raster object that you want to re-project. It cannot be used if *no*
 CRS is defined. Lucky for us, the `DTM_hill_HARV` has a defined CRS. 
 
 <div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** When we reproject a raster, we 
+
+<i class="fa fa-star"></i> **Data Tip:** When we re-project a raster, we 
 move it from one "grid" to another. Thus, we are modifying the data! Keep this 
 in mind as we work with raster data. 
+
 </div>
 
-To use the `projectRaster` function, we need to define two things:
+To use the `project` function, we need to define two things:
 
-1. the object we want to reproject and 
-2. the CRS that we want to reproject it to. 
+1. the object we want to re-project and 
+2. the CRS that we want to re-project it to
 
-The syntax is `projectRaster(RasterObject,crs=CRSToReprojectTo)`
+To see the inputs/outputs type `help("project")`.
 
 We want the CRS of our hillshade to match the `DTM_HARV` raster. We can thus
-assign the CRS of our `DTM_HARV` to our hillshade within the `projectRaster()`
+assign the CRS of our `DTM_HARV` to our hillshade within the `project()`
 function as follows: `crs=crs(DTM_HARV)`.
 
 ```{r reproject-raster }
@@ -229,7 +227,7 @@ Why do you think the two extents differ?
 
 ## Deal with Raster Resolution
 
-Let's next have a look at the resolution of our reprojected hillshade.  
+Let's next have a look at the resolution of our re-projected hillshade.  
 
 ```{r view-resolution}
 
